apps/quarkus-pipeline-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-pipelines-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-pipelines-demo
  template:
    metadata:
      labels:
        app: quarkus-pipelines-demo
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/demo-pipeline/quarkus-pipelines-demo@sha256:503bd4feef4d3644b8afe7ca205b6f013514703ee2962c74d6aa97ddf98b036e
          ports:
            - containerPort: 8080
