apps/quarkus-pipeline-demo/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-pipelines-demo
  labels:
    app: quarkus-pipelines-demo
spec:
  to:
    kind: Service
    name: quarkus-pipelines-demo
  port:
    targetPort: http
  tls:
    termination: edge
